@@ -1,6 +1,5 @@
 {% extends "wagtailadmin/base.html" %}
-{% load wagtailimages_tags %}
-{% load i18n %}
+{% load wagtailimages_tags i18n wagtailadmin_tags %}
 {% block titletag %}{% trans "Delete image" %}{% endblock %}
 
 {% block content %}
@@ -12,6 +11,12 @@
             {% image image max-800x600 %}
         </div>
         <div class="col6">
+            {% usage_count_enabled as uc_enabled %}
+            {% if uc_enabled %}
+                <div class="usagecount">
+                    <a href="{{ image.usage_url }}">{% blocktrans count usage_count=image.get_usage.count %}Used {{ usage_count }} time{% plural %}Used {{ usage_count }} times{% endblocktrans %}</a>
+                </div>
+            {% endif %}
             <p>{% trans "Are you sure you want to delete this image?" %}</p>
             <form action="{% url 'wagtailimages:delete' image.id %}" method="POST">
                 {% csrf_token %}
